# content-lab

./: .console-build-fingerprint  .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  open-console.ps1  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  stop-console.ps1  tsconfig.base.json  verify.ps1
.cursor/: environment.json
.github/workflows/: ci.yml
apps/api/: alembic.ini  pyproject.toml
apps/api/migrations/: env.py
apps/api/migrations/versions/: 0001_initial_schema.py  0002_normalise_starter_operational_tables.py  0003_add_multi_tenancy_tables_and_org_fks.py  0004_expand_operational_tables.py  0005_pages_and_reel_lifecycle.py  0006_metrics_audio_features.py  0007_asset_registry_support.py  0008_policy_tasks_provider_audit_integrity.py
apps/api/src/content_lab_api/: constants.py  db.py  main.py  models.py  schemas.py
apps/api/src/content_lab_api/middleware/: __init__.py  request_context.py
apps/api/src/content_lab_api/models/: __init__.py  api_key.py  asset.py  asset_family.py  asset_gen_param.py  asset_usage.py  audio_track.py  audit_log.py  derived_feature.py  experiment.py  org.py  org_membership.py  outbox.py  page.py  policy_state.py  provider_job.py  reel.py  reel_family.py  reel_metric.py  run.py  run_asset.py  storage_integrity_check.py  task.py  user.py
apps/api/src/content_lab_api/routes/: __init__.py  _storage.py  assets.py  auth.py  health.py  packages.py  pages.py  policy.py  reel_families.py  reels.py  runs.py
apps/api/src/content_lab_api/schemas/: __init__.py  asset.py  assets.py  outbox.py  packages.py  pages.py  policy.py  reel_families.py  reels.py  run.py  runs.py
apps/api/src/content_lab_api/services/: __init__.py  asset_persistence.py  asset_registry.py  process_reel.py  provider_jobs.py  reel_factory.py  run_tasks.py
apps/api/tests/: conftest.py  test_asset_persistence_service.py  test_asset_registry_schema.py  test_assets_resolve_routes.py  test_auth_dependencies.py  test_auth_routes.py  test_db_0008.py  test_health.py  test_metrics_audio_features_migration.py  test_operational_models.py  test_package_imports.py  test_package_routes.py  test_pages_persona_validation.py  test_pages_routes.py  test_policy_routes.py  test_process_reel_packaging.py  test_provider_job_services.py  test_reel_families_routes.py  test_reel_page_models.py  test_reels_routes.py  test_request_id.py  test_runs_routes.py
apps/orchestrator/: pyproject.toml
apps/orchestrator/src/content_lab_orchestrator/: cli.py  correlation.py  flows.py
apps/orchestrator/src/content_lab_orchestrator/flows/: __init__.py  daily_reel_factory.py  process_reel.py  provider_job_sweeper.py  registry.py  storage_integrity_check.py
apps/orchestrator/tests/: test_cli.py  test_flow.py
apps/web/: package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/web/app/: globals.css  layout.tsx  operator-console.helpers.ts  operator-console.tsx  page.test.ts  page.test.tsx  page.tsx  policy-editor.helpers.ts
apps/web/app/_components/: detail-ui.tsx  operator-console.tsx  operator-shell.tsx  operator-top-bar.tsx  page-workspace.tsx  policy-editor.tsx  workspace-org-switcher.tsx
apps/web/app/_lib/: content-lab-data.ts  operator-context.test.ts  operator-context.ts  operator-dashboard.ts  operator-page-workspace.ts  operator-policy.ts
apps/web/app/actions/: page.tsx
apps/web/app/api/operator-context/: route.ts
apps/web/app/orgs/[orgId]/pages/[pageId]/: page.tsx
apps/web/app/orgs/[orgId]/pages/[pageId]/policy/: page.tsx
apps/web/app/orgs/[orgId]/pages/[pageId]/reels/: page.tsx
apps/web/app/orgs/[orgId]/pages/[pageId]/reels/[reelId]/: page.tsx
apps/web/app/orgs/[orgId]/pages/[pageId]/runs/: page.tsx
apps/web/app/orgs/[orgId]/runs/[runId]/: page.tsx
apps/web/app/pages/: page.tsx
apps/web/app/policy/: page.tsx
apps/web/app/queue/: page.tsx
apps/web/app/reels/: page.tsx
apps/web/app/runs/: page.tsx
apps/web/app/ui-demo/: page.tsx
apps/worker/: pyproject.toml
apps/worker/src/content_lab_worker/: correlation.py  worker.py
apps/worker/src/content_lab_worker/actors/: __init__.py  _shared.py  editing.py  integrity.py  outbox.py  outbox_dispatcher.py  provider.py  registry.py  runway.py
apps/worker/tests/: test_outbox_dispatcher.py  test_ping.py  test_provider_actor.py  test_runway_actor.py  test_worker_entrypoint.py
docs/: AI_RULES.md  Content_Lab_Comprehensive_Stack_v2.0_Scaffold_Aligned.md  Content_Lab_Prod_Architecture_v2.0_Scaffold_Aligned.md  Content_Laboratory_Project_Charter_v2.0_Scaffold_Aligned.md  PHASE1_SECURITY_CHECKLIST.md  RUN_LOCAL.md  WORKTREE_WORKFLOW.md  worktree-prompts.md
infra/: .env.example  Dockerfile.api  Dockerfile.orchestrator  Dockerfile.web  Dockerfile.worker  docker-compose.yml
scripts/: api-health-smoke.ps1  ci_debug_probe.py  e2e_mvp_smoke.py  e2e_mvp_smoke.sh  e2e_no_regen.py  e2e_no_regen.sh  ensure-scaffold-compat.ps1  ensure-scaffold-compat.sh  manual-smoke-reel.ps1  open-console.ps1  py_check.ps1  py_check.sh  stop-console.ps1  verify-scaffold.ps1  verify-worktree-workflow.ps1  worktree-cleanup.ps1  worktree-cleanup.sh  worktree-copy-merge.ps1  worktree-copy-task.ps1  worktree-spawn.ps1  worktree-spawn.sh
