[tool.poetry]
name = "content-lab-api"
version = "0.1.0"
description = "FastAPI for Content Lab"
authors = ["Ryan <you@example.com>"]
packages = [{ include = "content_lab_api", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
pydantic = "^2.7.0"
sqlalchemy = "^2.0.30"
psycopg = {extras = ["binary"], version = "^3.2.0"}
alembic = "^1.13.1"
redis = "^5.0.4"
httpx = "^0.27.0"
content-lab-shared = {path = "../../packages/shared/py", develop = true}

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.7"
mypy = "^1.10.0"
ruff = "^0.4.10"
black = "^24.4.2"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
extend-select = ["I", "UP", "B", "SIM"]
ignore = ["B008"]
src = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
