[tool.poetry]
name = "content-lab-api"
version = "0.1.0"
description = "FastAPI for Content Lab"
authors = ["Ryan <you@example.com>"]
packages = [{ include = "content_lab_api", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
pydantic = "^2.7.0"
sqlalchemy = "^2.0.30"
psycopg = {extras = ["binary"], version = "^3.2.0"}
pgvector = "^0.3.0"
alembic = "^1.13.1"
redis = "^5.0.4"
httpx = "^0.27.0"
content-lab-shared = {path = "../../packages/shared/py", develop = true}
content-lab-core = {path = "../../packages/core", develop = true}
content-lab-auth = {path = "../../packages/auth", develop = true}
content-lab-storage = {path = "../../packages/storage", develop = true}
content-lab-assets = {path = "../../packages/assets", develop = true}
content-lab-qa = {path = "../../packages/qa", develop = true}
content-lab-runs = {path = "../../packages/runs", develop = true}
content-lab-outbox = {path = "../../packages/outbox", develop = true}
content-lab-creative = {path = "../../packages/creative", develop = true}

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.7"
mypy = "^1.10.0"
ruff = "^0.4.10"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
extend-select = ["I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.ruff.lint.isort]
known-first-party = ["content_lab_api", "content_lab_shared", "content_lab_core", "content_lab_auth", "content_lab_storage", "content_lab_assets", "content_lab_qa", "content_lab_runs", "content_lab_outbox", "content_lab_creative"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
