[tool.poetry]
name = "content-lab-orchestrator"
version = "0.1.0"
description = "Prefect flows for Content Lab"
authors = ["Ryan <you@example.com>"]
packages = [{ include = "content_lab_orchestrator", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
prefect = "^2.20.0"
content-lab-shared = {path = "../../packages/shared/py", develop = true}
content-lab-runs = {path = "../../packages/runs", develop = true}

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
mypy = "^1.10.0"
ruff = "^0.4.10"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
extend-select = ["I", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = [
    "content_lab_orchestrator",
    "content_lab_runs",
    "content_lab_shared",
]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
