[tool.poetry]
name = "content-lab-orchestrator"
version = "0.1.0"
description = "Prefect flows for Content Lab"
authors = ["Ryan <you@example.com>"]
packages = [{ include = "content_lab_orchestrator", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
prefect = "^2.20.0"
content-lab-api = {path = "../api", develop = true}
content-lab-worker = {path = "../worker", develop = true}
content-lab-qa = {path = "../../packages/qa", develop = true}
content-lab-shared = {path = "../../packages/shared/py", develop = true}
content-lab-core = {path = "../../packages/core", develop = true}
content-lab-runs = {path = "../../packages/runs", develop = true}

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
mypy = "^1.10.0"
ruff = "^0.4.10"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
extend-select = ["I", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["content_lab_orchestrator", "content_lab_api", "content_lab_worker", "content_lab_qa", "content_lab_shared", "content_lab_core", "content_lab_runs"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
filterwarnings = [
  "ignore:Please use `import python_multipart` instead\\.:PendingDeprecationWarning:prefect\\._vendor\\.starlette\\.formparsers",
  "ignore:Support for class-based `config` is deprecated, use ConfigDict instead\\.:pydantic.warnings.PydanticDeprecatedSince20:prefect\\.input\\.run_input",
  "ignore:Support for class-based `config` is deprecated, use ConfigDict instead\\.:pydantic.warnings.PydanticDeprecatedSince20:prefect\\._internal\\.pydantic\\.v2_validated_func",
  "ignore:The `__fields__` attribute is deprecated, use the `model_fields` class property instead\\.:pydantic.warnings.PydanticDeprecatedSince20:pydantic\\.v1\\.decorator",
  "ignore:The `__fields__` attribute is deprecated, use the `model_fields` class property instead\\.:pydantic.warnings.PydanticDeprecatedSince20:prefect\\.flows",
  "ignore:The `__fields_set__` attribute is deprecated, use `model_fields_set` instead\\.:pydantic.warnings.PydanticDeprecatedSince20:prefect\\.flows",
  "ignore:The private method `_iter` will be removed and should no longer be used\\.:pydantic.warnings.PydanticDeprecatedSince20:prefect\\.flows",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
